--- a/Aspire Budgeting.xcodeproj/xcshareddata/xcschemes/Aspire Budgeting.xcscheme
+++ b/Aspire Budgeting.xcodeproj/xcshareddata/xcschemes/Aspire Budgeting.xcscheme
@@ -10,7 +10,7 @@
             ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
             <ActionContent
                title = "Run Script"
-               scriptText = "INFO_PLIST=$SRCROOT/Aspire\ Budgeting/Info.plist&#10;/usr/libexec/PlistBuddy -c &quot;Delete :CFBundleURLTypes&quot; &quot;$INFO_PLIST&quot;&#10;">
+               scriptText = "INFO_PLIST=$SRCROOT/Aspire\ Budgeting/Info.plist&#10;/usr/libexec/PlistBuddy -c &quot;Delete :GIDClientID&quot; &quot;$INFO_PLIST&quot;&#10;/usr/libexec/PlistBuddy -c &quot;Delete :CFBundleURLTypes&quot; &quot;$INFO_PLIST&quot;&#10;">
                <EnvironmentBuildable>
                   <BuildableReference
                      BuildableIdentifier = "primary"
